--- a/Mp3/Mp3.Droid/Resources/layout/PlayerView.axml
+++ b/Mp3/Mp3.Droid/Resources/layout/PlayerView.axml
@@ -69,6 +69,7 @@
             android:text="&lt;&lt;"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            local:MvxBind="Click DoPrevCommand"
             android:id="@+id/Prev"
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="40dp" />
@@ -84,6 +85,7 @@
             android:text="&gt;&gt;"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            local:MvxBind="Click DoNextCommand"
             android:id="@+id/Next"
             android:layout_alignParentRight="true"
             android:layout_marginRight="40dp" />
