--- a/Mp3/Mp3.Droid/Resources/layout/PlayerView.axml
+++ b/Mp3/Mp3.Droid/Resources/layout/PlayerView.axml
@@ -51,10 +51,11 @@
             android:layout_toRightOf="@+id/PlayPos"
             android:layout_toLeftOf="@+id/timeSong" />
         <TextView
-            android:text="2:00"
+            android:text="0:00"
             android:textSize="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            local:MvxBind="Text Duration"
             android:id="@+id/timeSong"
             android:layout_alignParentRight="true" />
     </RelativeLayout>
