--- a/Mp3/Mp3.Droid/Resources/layout/PlayerView.axml
+++ b/Mp3/Mp3.Droid/Resources/layout/PlayerView.axml
@@ -26,7 +26,7 @@
         android:textSize="10dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        local:MvxBind="Text Item.Name"
+        local:MvxBind="Text Item.Artist"
         android:id="@+id/Artist"
         android:layout_centerInParent="true"
         android:layout_below="@+id/Name" />
@@ -55,7 +55,7 @@
             android:textSize="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            local:MvxBind="Text Duration"
+            local:MvxBind="Text Item.Duration"
             android:id="@+id/timeSong"
             android:layout_alignParentRight="true" />
     </RelativeLayout>
