work with some bug play list music

--- a/Mp3/Mp3.Droid/Resources/layout/MusicListView.axml
+++ b/Mp3/Mp3.Droid/Resources/layout/MusicListView.axml
@@ -8,6 +8,6 @@
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        local:MvxBind="ItemsSource DataMusics; ItemClick TapItemMusicCommand"
+        local:MvxBind="ItemsSource ListSongs; ItemClick TapItemMusicCommand"
         local:MvxItemTemplate="@layout/list_music" />
 </LinearLayout>
