--- a/Mp3/Mp3.Droid/Resources/layout/PlayerView.axml
+++ b/Mp3/Mp3.Droid/Resources/layout/PlayerView.axml
@@ -4,14 +4,23 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
+    <Button
+        android:text="Playlist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        local:MvxBind="Click PlayLists"
+        android:id="@+id/PlayLists"
+        android:layout_marginLeft="40dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true" />
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dip"
         android:src="@drawable/adele"
         android:id="@+id/Image"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/PlayLists" />
     <TextView
         android:text="Song title"
         android:textSize="20dp"
