--- a/Mp3/Mp3.Droid/Resources/layout/List_AddPLView.axml
+++ b/Mp3/Mp3.Droid/Resources/layout/List_AddPLView.axml
@@ -12,6 +12,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/checkBox1"
+            local:MvxBind="Checked IsChecked"
             android:layout_alignParentLeft="true" />
         <TextView
             android:text="Name"
