--- a/Mp3/Mp3.Droid/Resources/layout/PLsView.axml
+++ b/Mp3/Mp3.Droid/Resources/layout/PLsView.axml
@@ -4,10 +4,16 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <Button
+        android:text="Add New PlayList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        local:MvxBind="Click AddPlayListCommand"
+        android:id="@+id/AddPlayList" />
     <Mvx.MvxListView
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        local:MvxBind="ItemsSource ListSongs; ItemClick TapItemMusicCommand"
-        local:MvxItemTemplate="@layout/list_musiclistview" />
+        local:MvxBind="ItemsSource PlayLists ; ItemClick TapItemPlCommand"
+        local:MvxItemTemplate="@layout/list_plsview" />
 </LinearLayout>
