--- a/Mp3/Mp3.Droid/Resources/layout/List_PLView.axml
+++ b/Mp3/Mp3.Droid/Resources/layout/List_PLView.axml
@@ -13,6 +13,6 @@
             android:textSize="15dp"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            local:MvxBind="Text NamePlayList" />
+            local:MvxBind="Text Name" />
     </LinearLayout>
 </LinearLayout>
