--- a/Mp3/Mp3.Droid/Resources/layout/PLView.axml
+++ b/Mp3/Mp3.Droid/Resources/layout/PLView.axml
@@ -3,21 +3,23 @@
     xmlns:local="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <EditText
-        android:inputType="textMultiLine"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText1" />
+    android:layout_height="match_parent"
+    android:minWidth="25px"
+    android:minHeight="25px">
     <Button
-        android:text="Button"
-        android:layout_width="match_parent"
+        android:text="Edit"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button1" />
+    <Button
+        android:text="Delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button2" />
     <Mvx.MvxListView
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         local:MvxBind="ItemsSource ListSongs"
-        local:MvxItemTemplate="@layout/list_forplaylist" />
+        local:MvxItemTemplate="@layout/list_plview" />
 </LinearLayout>
