--- a/Mp3/Mp3.Droid/Resources/layout/EditPLView.axml
+++ b/Mp3/Mp3.Droid/Resources/layout/EditPLView.axml
@@ -8,12 +8,12 @@
         android:text="Save"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        local:MvxBind="Click AddPlayListCommand"
-        android:id="@+id/AddPlayList" />
+        local:MvxBind="Click SavePLCommand"
+        android:id="@+id/BtnSave" />
     <Mvx.MvxListView
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        local:MvxBind="ItemsSource ListMusic"
-        local:MvxItemTemplate="@layout/list_editplview" />
+        local:MvxBind="ItemsSource ListSongs"
+        local:MvxItemTemplate="@layout/list_addplview" />
 </LinearLayout>
