--- a/Mp3/Mp3.Droid/Resources/layout/PLView.axml
+++ b/Mp3/Mp3.Droid/Resources/layout/PLView.axml
@@ -10,6 +10,7 @@
         android:text="Edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        local:MvxBind="Click EditPLCommand"
         android:id="@+id/button1" />
     <Button
         android:text="Delete"
