--- a/Mp3/Mp3.Droid/Resources/layout/PlayerView.axml
+++ b/Mp3/Mp3.Droid/Resources/layout/PlayerView.axml
@@ -8,7 +8,7 @@
         android:text="Playlist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        local:MvxBind="Click PlayLists"
+        local:MvxBind="Click PlayListsCommand"
         android:id="@+id/PlayLists"
         android:layout_marginLeft="40dp"
         android:layout_alignParentRight="true"
