--- a/Mp3/Mp3.Droid/Resources/layout/PLView.axml
+++ b/Mp3/Mp3.Droid/Resources/layout/PLView.axml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:local="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:minWidth="25px"
-    android:minHeight="25px">
+    android:layout_height="match_parent">
     <Button
         android:text="Edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         local:MvxBind="Click EditPLCommand"
-        android:id="@+id/button1" />
+        android:id="@+id/BtnSave" />
     <Button
         android:text="Delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button2" />
+        android:id="@+id/BtnDel"
+        android:layout_alignParentRight="true" />
     <Mvx.MvxListView
         android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         local:MvxBind="ItemsSource ListSongs; ItemClick TapItemPlayCommand"
-        local:MvxItemTemplate="@layout/list_plview" />
-</LinearLayout>
+        local:MvxItemTemplate="@layout/list_plview"
+        android:layout_below="@+id/BtnDel" />
+</RelativeLayout>
