--- a/Mp3/Mp3.Droid/Resources/layout/PLView.axml
+++ b/Mp3/Mp3.Droid/Resources/layout/PLView.axml
@@ -14,6 +14,7 @@
         android:text="Delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        local:MvxBind="Click DeletePLCommand"
         android:id="@+id/BtnDel"
         android:layout_alignParentRight="true" />
     <Mvx.MvxListView
